# py-udal-cwd

./: LICENSE  README.md  example.ipynb  pyproject.toml
cwd/: copernicus_functions_poly.py  udal.py
